--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="/images/general/do-1.jpg" alt="Website" width="360"></li>
-                <li><img src="/images/general/do-2.jpg" alt="Chatbot" width="360"></li>
-                <li><img src="/images/general/do-3.jpg" alt="App" width="360"></li>
+                <li><img src="images/general/do-1.jpg" alt="Website" width="360"></li>
+                <li><img src="images/general/do-2.jpg" alt="Chatbot" width="360"></li>
+                <li><img src="images/general/do-3.jpg" alt="App" width="360"></li>
             </ul>
         </section>
 
@@ -71,22 +71,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/team/tm-1.jpg" alt="Mark Guerrero" width="264">
+                    <img src="images/team/tm-1.jpg" alt="Mark Guerrero" width="264">
                     <h4>Mark Guerrero</h4>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/team/tm-2.jpg" alt="Tom Ford" width="264">
+                    <img src="images/team/tm-2.jpg" alt="Tom Ford" width="264">
                     <h4>Tom Ford</h4>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/team/tm-3.jpg" alt="Camila Garcia" width="264">
+                    <img src="images/team/tm-3.jpg" alt="Camila Garcia" width="264">
                     <h4>Camila Garcia</h4>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/team/tm-4.jpg" alt="Daniel Wilson" width="264">
+                    <img src="images/team/tm-4.jpg" alt="Daniel Wilson" width="264">
                     <h4>Daniel Wilson</h4>
                     <p>UI Designer</p>
                 </li>
