--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <a href="/">WebStudio</a>
+        <a href="./">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="">Studio</a></li>
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <a href="/">WebStudio</a>
+        <a href="./">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
