--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="./">WebStudio</a>
         <nav>
             <ul>
-                <li><a href="">Studio</a></li>
+                <li><a href="./">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
