--- a/index.html
+++ b/index.html
@@ -10,26 +10,35 @@
 <body>
 
     <header>
-        <a href="./">WebStudio</a>
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="./">Studio</a></li>
+                <li><a href="./index.html">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
 
     <main>
 
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-
         <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+        
+        <section>
+            <h2>What are we doing</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -56,42 +65,32 @@
                     </p>
                 </li>
             </ul>
-        </section>
 
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li><img src="images/general/do-1.jpg" alt="Image of the analytics platform developed by WebStudio" width="360">
-                </li>
-                <li><img src="images/general/do-2.jpg" alt="Image of the Chatbot developed by WebStudio" width="360"></li>
-                <li><img src="images/general/do-3.jpg"
-                        alt="Image of a website (mobile and desktop versions) developed by WebStudio" width="360"></li>
-            </ul>
         </section>
         
         <section>
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/team/tm-1.jpg" alt="Photo of Mark Guerrero, product designer, from the WebStudio team"
+                    <img src=".images/team/tm-1.jpg" alt="Photo of Mark Guerrero, product designer, from the WebStudio team"
                         width="264">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="images/team/tm-2.jpg" alt="Photo of Tom Ford, frontend developer, from the WebStudio team"
+                    <img src=".images/team/tm-2.jpg" alt="Photo of Tom Ford, frontend developer, from the WebStudio team"
                         width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="images/team/tm-3.jpg" alt="Photo of Camila Garcia, marketing specialist, from the WebStudio team"
+                    <img src=".images/team/tm-3.jpg" alt="Photo of Camila Garcia, marketing specialist, from the WebStudio team"
                         width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="images/team/tm-4.jpg" alt="Photo of Daniel Wilson, UI designer, from the WebStudio team"
+                    <img src=".images/team/tm-4.jpg" alt="Photo of Daniel Wilson, UI designer, from the WebStudio team"
                         width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
@@ -102,7 +101,7 @@
     </main>
 
     <footer>
-        <a href="./">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
